# console_utilities

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  example.cpp
googletest-download/: CMakeLists.txt
src/: CMakeLists.txt
src/include/: console_animation.h  console_progress_bar.h
tests/: CMakeLists.txt  console_animation_tests.cpp  console_progress_bar_tests.cpp  tests_common.h
